cluster/home/005-ingress.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`home.meba.xyz`)
      services:
        - name: homeassistant
          port: 8123
    - kind: Rule
      match: Host(`192.168.1.220') && PathPrefix(`/homa`)
      services:
        - name: homeassistant
          port: 8123
    - kind: Rule
      match: Host(`192.168.1.221') && PathPrefix(`/homa`)
      services:
        - name: homeassistant
          port: 8123
    - kind: Rule
      match: Host(`192.168.1.250')
      services:
        - name: homeassistant
          port: 8123
